Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -894,7 +894,7 @@
     "locked": "Verschlossen",
     "log": "Register",
     "login": "Anmeldung",
-    "login-cookie-fail": "Session-Cookie ist fehlgeschlagen",
+    "login-cookie-fail": "Session-Cookie ist fehlgeschlagen: Möglicherweise haben Sie sich von einem anderen Gerät oder Browser angemeldet.",
     "login-image": "Login-Bild",
     "login-ok": "Melden Sie sich erfolgreich an (Cookie). Benutzer: '0'",
     "login-password-fail": "Anmeldung fehlgeschlagen",
@@ -963,7 +963,7 @@
     "missing-file": "Datei fehlt",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "Mobil",
-    "model": "Modelo",
+    "model": "Modell",
     "model-not-found": "Modell nicht gefunden: %model%",
     "monday": "Montag",
     "month": "Monat",
@@ -1179,7 +1179,7 @@
     "previous-balance": "Vorheriger Saldo",
     "previous-documents": "vorherige Dokumente",
     "previous-quarter": "Vorheriges Quartal",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Früher vom Lieferanten gekauft",
     "previously-sold-to-customer": "Zuvor an den Kunden verkauft",
     "price": "Preis",
     "price-with-tax": "Preis + Steuer",
@@ -1315,7 +1315,7 @@
     "roles": "Rollen",
     "rules": "Rules",
     "run": "Ausführen",
-    "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
+    "running-plugin-cron": "Führe FacturaScripts Cron für das Plugin %pluginName% aus",
     "sales": "Der Umsatz",
     "sales-invoice": "Verkaufsrechnung",
     "sales-rate": "Verkaufsrate",
@@ -1386,7 +1386,7 @@
     "show-month-stats": "Monatsstatistiken anzeigen",
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
     "show-price": "Show price on print",
-    "show-quantity": "Show quantity on print",
+    "show-quantity": "Menge bei Druck anzeigen",
     "show-section-new": "Neuen Abschnitt anzeigen",
     "signature": "Unterschrift",
     "simple": "Einfach",
@@ -1401,7 +1401,7 @@
     "sort": "Order",
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Nach Datum absteigend sortieren",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sorted-asc": "Aufsteigend sortiert",
@@ -1573,7 +1573,7 @@
     "unchecked": "Nicht überprüft",
     "under-minimums": "Unterhalb der Mindestgrenzen",
     "undo": "Rückgängig machen",
-    "unit-profit": "unit-profit",
+    "unit-profit": "Einheitsgewinn",
     "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "Einzelverkaufspreis",
     "unlimited": "Unbegrenzt",
@@ -1628,7 +1628,7 @@
     "verified": "geprüft",
     "version": "Version",
     "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "Die Nummer '%vat-number%' ist im VIES-System registriert",
     "view-api": "API anzeigen",
     "view-column-net-subtotal": "Spalte Nettosumme oder Subtotal anzeigen",
     "view-estimation": "Schätzung anzeigen",
