--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1121,7 +1121,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Sovrapprezzo",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% tasse",
     "pct-vat": "% IVA",
     "pending": "in attesa",
     "pending-invoices-button": "Fatture in sospeso:",
@@ -1491,8 +1491,8 @@
     "table-not-found": "tabella-non-trovata",
     "table-size": "Dimensione della tabella",
     "tables": "disegnare",
-    "task": "task",
-    "tasks": "tasks",
+    "task": "Compito",
+    "tasks": "Attività",
     "tasks-completed-title": "Compiti completati",
     "tasks-component-title": "Compiti",
     "tasks-personal-title": "Compiti personali",
@@ -1562,7 +1562,7 @@
     "type-alert": "Tipo di avviso",
     "type-critical": "Tipo critico",
     "type-debug": "Tipo debug",
-    "type-emergency": "Type emergency",
+    "type-emergency": "Tipo di emergenza",
     "type-error": "Tipo di errore",
     "type-info": "Tipo informazioni",
     "type-notice": "Tipo di avviso",
