--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -7,7 +7,7 @@
     "accept-privacy-policy": "Acepta la política de privacidad",
     "accepted": "Aceptado",
     "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
-    "access-denied": "Acceso denegado",
+    "access-denied": "Dostęp zabroniony",
     "access-denied-p": "Nie masz uprawnień do przeglądania tych danych. Jeśli uważasz, że powinieneś mieć dostęp do tych danych, skontaktuj się z administratorem, aby przyznał Ci dostęp.",
     "account": "Cuenta",
     "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuenta padre equivocada.",
@@ -88,7 +88,7 @@
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Permitir modificar",
-    "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-company-email": "Zawsze na email firmy",
     "amount": "Importe",
     "amount-without-discount": "Cena bez zniżki",
     "and": "y",
@@ -112,7 +112,7 @@
     "approve-document-same-date": "Aprobar documento en la misma fecha",
     "approved": "Aprobado",
     "april": "Abril",
-    "are-you-sure": "Esto no se puede deshacer. ¿Está seguro que desea continuar?",
+    "are-you-sure": "Tego nie można cofnąć. Czy na pewno chcesz kontynuować?",
     "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
     "asset": "Aktywa",
     "assigned": "Asignado",
@@ -139,7 +139,7 @@
     "back": "Volver",
     "background-color": "Kolor tła",
     "background-overlay": "Kolor nakładki na tle",
-    "badge": "Distintivo",
+    "badge": "Odznaka",
     "balance": "Saldo",
     "balance-account": "Bilans kont",
     "balance-account-abreviated": "Zrównoważony skrót konta",
@@ -158,7 +158,7 @@
     "big": "Duży",
     "billing": "Facturación",
     "billing-address": "Adres do faktury",
-    "birth-date": "Fecha de nacimiento",
+    "birth-date": "Data urodzenia",
     "birthday": "Urodziny",
     "block-date": "Data blokady",
     "blocked": "Zablokowany",
@@ -286,7 +286,7 @@
     "compared": "Porównany",
     "compatible": "Compatible",
     "completed": "Zakończony",
-    "component": "Componente",
+    "component": "Komponent",
     "concept": "Concepto",
     "conditions": "Warunki",
     "configure-columns": "Konfigurator kolumn",
@@ -300,9 +300,9 @@
     "contact-person": "Osoba kontaktowa",
     "contacts": "Kontakty",
     "context": "Kontekst",
-    "continue": "Continuar",
+    "continue": "Kontynuować",
     "contract": "Contrato",
-    "contracts": "Contratos",
+    "contracts": "Umowy",
     "control-panel": "Panel de control",
     "control-panel-decimal-warning": "Ostrzeżenie: ta zmiana zostanie zastosowana do cen produktów, ale także do całkowitych kwot na fakturach, księgach, etc.",
     "controller": "Controlador",
@@ -393,7 +393,7 @@
     "db-host": "Host bazy danych",
     "db-name": "Nazwa bazy danych",
     "db-password": "Hasło do bazy danych",
-    "db-port": "Puerto base de datos",
+    "db-port": "Port bazy danych",
     "db-type": "Typ serwera SQL",
     "db-type-not-recognized": "Typ połączenia nie jest rozpoznawany. Musi być MySQL lub PostgreSQL",
     "db-user": "Usuario base de datos",
@@ -425,7 +425,7 @@
     "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
     "delivery-notes": "Albaranes",
     "delivery-notes-button": "Faktury realizowane:",
-    "department": "Departamento",
+    "department": "Dział",
     "departments": "Działy",
     "desc": "Opis",
     "desc-alfa-code-2": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
@@ -434,7 +434,7 @@
     "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
     "desc-customer-name": "Nombre por el cual el cliente es conocido. Para uso interno.",
     "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
-    "desc-payment-days": "Ejemplo: 1,15,31",
+    "desc-payment-days": "Przykład: 1,15,31",
     "desc-provicer-business-name-2": "Opis nazwy firmy dostawcy 2",
     "desc-provider-business-name": "Opis nazwy firmy dostawcy",
     "desc-provider-name": "Nazwa, pod którą znany jest dostawca. Do użytku wewnętrznego.",
@@ -581,13 +581,13 @@
     "exercise": "Ćwiczenie",
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
     "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
-    "exercise-not-found": "Ejercicio no encontrado.",
+    "exercise-not-found": "Ćwiczenie nie znalezione.",
     "exercise-without-accounting-plan": "Ćwiczenie %exercise% nie ma jeszcze planu rachunkowego",
     "exercises": "Ejercicios",
     "exit": "Wyjdź",
     "expedient": "Akta",
     "expense-subaccount": "Subcuenta para gastos bancarios",
-    "expenses": "Gastos",
+    "expenses": "Wydatki",
     "expiration": "Vencimiento",
     "expiration-type": "Tipo de vencimiento",
     "expired": "Caducado",
@@ -607,7 +607,7 @@
     "file": "Plik",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nombre de archivo",
-    "file-not-exists": "No existe el archivo: %fileName%",
+    "file-not-exists": "Plik nie istnieje: %fileName%",
     "file-not-found": "Plik %fileName% nie znaleziony.",
     "file-not-supported": "Plik nie jest obsługiwany",
     "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
@@ -694,7 +694,7 @@
     "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
     "greater-than": "Większy niż",
-    "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
+    "grid-help": "Control + Enter do wstawienia nowej linii. Możesz przesuwać lub usuwać linie klikając numer linii.",
     "group": "Grupa",
     "group-accounts": "Grupuj konta",
     "group-by-day": "Grupuj według dnia",
@@ -722,7 +722,7 @@
     "height": "Alto",
     "hello": "Hola",
     "help": "Pomoc",
-    "help-button-p": "Consulta la ayuda en cada pantalla",
+    "help-button-p": "Konsultuj pomoc na każdym ekranie",
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
@@ -733,7 +733,7 @@
     "homepage": "Strona główna",
     "host": "Gospodarz",
     "hour": "Godzina",
-    "hours": "Horas",
+    "hours": "Godziny",
     "http": "HTTP",
     "https": "HTTPS",
     "i-forgot-password": "He olvidado mi contraseña",
@@ -777,7 +777,7 @@
     "invalid-date": "Data %date% jest nieprawidłowa.",
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
-    "invalid-iban": "IBAN no válido: %iban%",
+    "invalid-iban": "Nieprawidłowy IBAN: %iban%",
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
     "invalid-request": "Nieprawidłowe żądanie",
@@ -817,7 +817,7 @@
     "journal": "Dziennik",
     "journal-closing": "Dziennik zamknięcia",
     "journal-opening": "Diario de apertura",
-    "journals": "Diarios",
+    "journals": "Dzienniki",
     "july": "Julio",
     "june": "Junio",
     "justified": "Justificado",
@@ -851,7 +851,7 @@
     "languages-va_ES": "Valenciano",
     "last-activity": "Ostatnia aktywność",
     "last-bimester": "Ostatni bimestre",
-    "last-block": "Último bloque",
+    "last-block": "Ostatni blok",
     "last-ip": "Ostatni adres IP",
     "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Ostatnia szacunkowa cena",
@@ -861,10 +861,10 @@
     "last-semester": "Ostatni semestr",
     "last-trimester": "Ostatni kwartał",
     "last-update": "Ostatnia modyfikacja",
-    "last-user": "Último usuario",
+    "last-user": "Ostatni użytkownik",
     "last-week": "W zeszłym tygodniu",
-    "last-year": "El año pasado",
-    "latitude": "Latitud",
+    "last-year": "Ubiegły rok",
+    "latitude": "Szerokość geograficzna",
     "latitude-abb": "Lat",
     "ledger": "Diario",
     "left": "Lewo",
@@ -900,9 +900,9 @@
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Zaloguj się, aby kontynuować",
-    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
+    "login-to-continue-p": "Musisz się zalogować, aby kontynuować tę akcję. Kliknij, aby się zalogować lub załóż konto.",
     "login-user-not-found": "Usuario no encontrado: %nick%",
-    "logo": "Logotipo",
+    "logo": "Logo",
     "logout": "Wyloguj się",
     "logout-ok": "Sesión cerrada correctamente.",
     "logs": "Dzienniki",
@@ -915,7 +915,7 @@
     "machine": "Máquina",
     "machines": "Maszyny",
     "macro-account-note-info": "Códigos para el reemplazo por valores",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Błąd połączenia z serwerem pocztowym",
     "mail-test-error": "La prueba de email ha fallado",
     "mail-test-ok": "Prueba de email ejecutada correctamente",
     "mailer": "Sterownik poczty",
@@ -1039,7 +1039,7 @@
     "not-valid-image": "To nie jest prawidłowy obraz",
     "not-valid-percentage-retention": "Nieprawidłowy procent. Musi być większy niż 0.00",
     "note": "Nota",
-    "notes": "Notas",
+    "notes": "Notatki",
     "notice": "Powiadomienie",
     "notices": "Avisos",
     "notification": "Notificación",
@@ -1057,7 +1057,7 @@
     "offsetting-account": "Konto do kompensacji",
     "only-active": "Tylko aktywne",
     "only-charged": "Sólo pagados",
-    "only-closed": "Solamente cerrados",
+    "only-closed": "Tylko zamknięte",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
     "only-pending": "Tylko oczekujące",
@@ -1070,8 +1070,8 @@
     "opening-operation": "Apertura",
     "operation": "Operación",
     "operator": "Operador",
-    "option": "Opción",
-    "optional": "opcional",
+    "option": "Opcja",
+    "optional": "opcjonalny",
     "options": "Opciones",
     "options-button-header": "Układ i uprawnienia",
     "order": "Zamówienie",
@@ -1087,7 +1087,7 @@
     "out-of-stock": "Brak towaru",
     "page": "Página",
     "page-break": "Złamanie strony",
-    "page-configuration": "Página de Configuración",
+    "page-configuration": "Strona ustawień",
     "page-not-found": "Strona nie znaleziona",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Estas son las opciones de maquetación y permisos de este formulario o listado. Puedes modificar el orden de los campos, ocultarlos, hacerlos de solo lectura o aumentar el nivel de privilegios. Los cambios se aplicarán al usuario seleccionado.",
@@ -1189,7 +1189,7 @@
     "print-data-records": "Imprimir todos los registros",
     "print-export-options": "Opciones de imprimir y exportar",
     "print-list-of-records": "Imprimir lista de registros",
-    "print-price": "Imprimir precios",
+    "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
     "printed": "Impreso",
     "printing-format": "Format druku",
@@ -1199,7 +1199,7 @@
     "private-key": "Clave privada",
     "process": "Proces",
     "processing": "Przetwarzanie",
-    "product": "Producto",
+    "product": "Produkt",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Productos",
     "profile": "Profil",
@@ -1463,7 +1463,7 @@
     "supplier": "Proveedor",
     "supplier-account-not-found": "Nie znaleziono subkonta dostawcy",
     "supplier-code": "Cód. Proveedor",
-    "supplier-delivery-note": "Albarán de Proveedor",
+    "supplier-delivery-note": "Wysłano dostawę od dostawcy",
     "supplier-delivery-notes": "Albaranes de proveedores",
     "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
@@ -1482,7 +1482,7 @@
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
-    "surname": "Apellidos",
+    "surname": "Nazwiska",
     "suspended": "Zawieszony",
     "swift": "Swift\/BIC",
     "symbol": "Symbol",
@@ -1578,7 +1578,7 @@
     "unit-sale-price": "Precio venta unit.",
     "unlimited": "Sin límites",
     "unlink": "Desvincular",
-    "unlink-file": "Desvincular archivo",
+    "unlink-file": "Odłącz plik",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Nieopłacone",
@@ -1596,7 +1596,7 @@
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Cargado en",
-    "url": "Dirección web",
+    "url": "Adres URL",
     "use-gaps": "Usar huecos",
     "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
     "user": "Użytkownik",
@@ -1608,7 +1608,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "Zatwierdź",
     "validate-iban": "Waliduj IBAN",
-    "valuation-type": "Tipo de valoración",
+    "valuation-type": "Typ wyceny",
     "value": "Wartość",
     "value-x": "Wartość X",
     "value-y": "Wartość Y",
@@ -1660,7 +1660,7 @@
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
-    "works": "Trabajos",
+    "works": "Prace",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Kolumna X",
     "x-operation": "Operación sobre X",
