--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -136,7 +136,7 @@
     "average": "Média",
     "average-cost": "Custo médio",
     "average-purchase-price": "Precio medio de compra",
-    "back": "Costas",
+    "back": "Voltar",
     "background-color": "Cor de fundo",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
@@ -245,7 +245,7 @@
     "close-box": "Fechar caixa",
     "close-exercise": "cerrar-ejercicio",
     "closed": "Fechado",
-    "closed-exercise": "O exercício 0 está fechado.",
+    "closed-exercise": "O exercício %exerciseName% está fechado.",
     "closed-exercise-cant-change-date": "O exercício %exerciseName% está fechado. Não é possível alterar a data.",
     "closing-accounting-completed": "cierre-contable-completado",
     "closing-closing-concept": "concepto-de-cierre",
@@ -586,7 +586,7 @@
     "exercises": "Exercícios",
     "exit": "Sair",
     "expedient": "Expediente",
-    "expense-subaccount": "expense-subaccount",
+    "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
     "expiration": "Expiração",
     "expiration-type": "Tipo de vencimento",
@@ -646,7 +646,7 @@
     "for-sale": "À venda",
     "foresee": "Prever",
     "format": "Formato",
-    "formula-cost-price": "formula-cost-price",
+    "formula-cost-price": "preço de custo + x% + y",
     "formula-sale-price": "preço - x% - y",
     "formula-to-apply": "Fórmula a aplicar",
     "fourth-quarter": "4º trimestre",
@@ -744,7 +744,7 @@
     "idem-wildcard-info": "Copiar o valor da linha anterior",
     "image": "Imagem",
     "images": "Imagens",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "images-added-correctly": "%count% imagens adicionadas corretamente",
     "impacted-tax-re-subaccount": "Subconta de imposto impactado repercutido",
     "impacted-tax-subaccount": "Subconta de imposto impactado",
     "import": "Importar",
@@ -757,7 +757,7 @@
     "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
-    "incorrect-accounting-amount": "Incorrect accounting entry amount.",
+    "incorrect-accounting-amount": "O montante da entrada contabilística está incorreto.",
     "info": "Informação",
     "infostate-component-title": "Informação do Status",
     "initial-number": "Número inicial",
@@ -949,7 +949,7 @@
     "menu": "Menu",
     "message": "Mensagem",
     "messages-component-title": "Avisos e Mensagens",
-    "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
+    "meta-description": "FacturaScripts é um software de faturamento e contabilidade para PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
@@ -1122,7 +1122,7 @@
     "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
-    "pct-vat": "VAT rate",
+    "pct-vat": "% Imposto",
     "pending": "pendente",
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "pedidos-pendentes-botão",
@@ -1385,7 +1385,7 @@
     "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
-    "show-price": "Show price on print",
+    "show-price": "Mostrar preço na impressão",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
     "signature": "Assinatura",
@@ -1499,7 +1499,7 @@
     "tax": "Imposto",
     "tax-area": "Área de impostos",
     "tax-areas": "Áreas de impostos",
-    "tax-base": "Tax base",
+    "tax-base": "Base Tributável",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Impostos do transporte",
@@ -1581,7 +1581,7 @@
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação excluída do registro corretamente.",
     "unlock-entry": "Desbloquear",
-    "unpaid": "unpaid",
+    "unpaid": "Não pago",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "Até a data",
     "until-subaccount": "até a subconta",
@@ -1596,7 +1596,7 @@
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
-    "url": "Local na rede Internet",
+    "url": "Endereço na rede Internet",
     "use-gaps": "Usar lacunas",
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
