--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -141,7 +141,7 @@
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
     "balance": "Equilíbrio",
-    "balance-account": "Balance account",
+    "balance-account": "Balanço de Contas",
     "balance-account-abreviated": "Balancete de Contas Abrigado",
     "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balanço Patrimonial",
@@ -266,7 +266,7 @@
     "color-warning": "Color advertencia",
     "colors": "colors",
     "column": "Coluna",
-    "columns": "Columns",
+    "columns": "Colunas",
     "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
@@ -284,7 +284,7 @@
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "Comparado",
-    "compatible": "Compatible",
+    "compatible": "Compatível",
     "completed": "Completado",
     "component": "Componente",
     "concept": "Conceito",
@@ -315,7 +315,7 @@
     "cookies": "Cookies",
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
-    "copy-subaccounts": "copy-subaccounts",
+    "copy-subaccounts": "Copiar plano de contas",
     "core-update": "core-update",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correto",
@@ -325,7 +325,7 @@
     "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "O %codiso% não pertence a nenhum país da União Europeia",
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Criar albaran",
@@ -345,7 +345,7 @@
     "current-quarter": "Trimestre atual",
     "current-risk": "Risco atual",
     "customer": "Cliente",
-    "customer-account-not-found": "customer-account-not-found",
+    "customer-account-not-found": "Subconta do cliente não encontrada",
     "customer-banking-accounts": "Contas bancárias",
     "customer-code": "Código Cliente",
     "customer-commission-info": "Sólo se aplicará quando a venda for ao cliente selecionado",
@@ -398,7 +398,7 @@
     "db-type-not-recognized": "Conexão de tipo de banco de dados não reconhecida. Deve ser MySQL ou PostgreSQL",
     "db-user": "Usuário de banco de dados",
     "debit": "Débito",
-    "debug-mode": "Debug mode",
+    "debug-mode": "Modo de depuração",
     "december": "Dezembro",
     "decimal-separator": "Decimal",
     "decimals": "Decimais",
@@ -501,7 +501,7 @@
     "editable": "Editable",
     "email": "O email",
     "email-bcc": "Cópia oculta do email",
-    "email-cc": "Email Carbon Copy",
+    "email-cc": "Email com cópia",
     "email-not-configured": "e",
     "email-not-sent": "Não enviado",
     "email-notification": "Notificação por email",
@@ -519,7 +519,7 @@
     "employees": "Empregados",
     "empty": "Vazio",
     "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
-    "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
+    "empty-ref-or-missing": "Referencia vazia ou produto não encontrado",
     "enable": "Ativar",
     "enable-api": "Ativar API",
     "enable-updates-beta": "Activar actualizaciones beta",
@@ -637,7 +637,7 @@
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
-    "footer": "Pié de página",
+    "footer": "Rodapé",
     "footer-text": "Texto do rodapé",
     "for-admins": "P",
     "for-all": "Para todos",
@@ -646,12 +646,12 @@
     "for-sale": "À venda",
     "foresee": "Prever",
     "format": "formato",
-    "formula-cost-price": "formula-cost-price",
+    "formula-cost-price": "preço de custo + x% + y",
     "formula-sale-price": "formula-sale-price",
     "formula-to-apply": "Fórmula para candidatar-se",
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto Trimestre",
-    "free": "free",
+    "free": "Grátis",
     "friday": "sexta-feira",
     "from": "De",
     "from-accounting-entry": "De lançamento",
@@ -744,7 +744,7 @@
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Imagem",
     "images": "Imagens",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "images-added-correctly": "%count% imagens adicionadas corretamente",
     "impacted-tax-re-subaccount": "Subconta de imposto exigido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "Importar",
@@ -757,7 +757,7 @@
     "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
-    "incorrect-accounting-amount": "Incorrect accounting entry amount.",
+    "incorrect-accounting-amount": "O montante da entrada contabilística está incorreto.",
     "info": "Info",
     "infostate-component-title": "Status Information",
     "initial-number": "initial-number",
@@ -821,7 +821,7 @@
     "july": "Julho",
     "june": "Junho",
     "justified": "justified",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Chave do Google Maps",
     "keys": "keys",
     "lang-code": "Código de idioma",
     "language": "Língua",
@@ -921,7 +921,7 @@
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
     "manage": "Gerir",
-    "manage-installation": "Administrar",
+    "manage-installation": "Gerir",
     "manual": "Manual",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
@@ -1088,8 +1088,8 @@
     "page": "Página",
     "page-break": "Salto de página",
     "page-configuration": "Página de Configuração",
-    "page-not-found": "Página no encontrada",
-    "page-not-found-p": "No hemos encontrado la página que busca.",
+    "page-not-found": "Página não encontrada",
+    "page-not-found-p": "Não encontramos a página que procura.",
     "page-option-info": "Estas são as opções de formatação e permissões deste formulário ou lista. Podes modificar a ordem dos campos, ocultá-los, torná-los apenas de leitura ou aumentar o nível de privilégios. As alterações serão aplicadas ao utilizador selecionado.",
     "page-total-amount": "Total da página",
     "pagename": "Nome da página",
@@ -1295,7 +1295,7 @@
     "report-non-grouping-account": "Não agrupar por contas",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
-    "request-sent": "request-sent",
+    "request-sent": "Pedido enviado",
     "required": "Obrigatório",
     "requires-core": "Requer FacturaScripts %version%",
     "reserved": "Reservado",
@@ -1340,7 +1340,7 @@
     "selected-quantity": "Quantidade selecionada",
     "selector-number": "Seletor",
     "send": "Enviar",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Enviar dados anónimos",
     "send-audios": "Enviar áudios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
@@ -1416,7 +1416,7 @@
     "standard": "Padrão",
     "start": "Inicio",
     "start-date": "Data de início",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Hora de início",
     "start-time": "start-time",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
@@ -1499,7 +1499,7 @@
     "tax": "Imposto",
     "tax-area": "Área fiscal",
     "tax-areas": "tax-areas",
-    "tax-base": "Tax base",
+    "tax-base": "Base Tributável",
     "tax-credit-account": "Credit account for taxes",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
